update Gallery and first commit in workshop II

--- a/html5-css3/Workshop-Galeria/index.html
+++ b/html5-css3/Workshop-Galeria/index.html
@@ -6,7 +6,7 @@
   <title>Gallery HTML5 - CSS3</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="shortcut icon" type="image/x-icon" href="../img/favicon.jpg">
+  <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 
@@ -36,8 +36,5 @@
   </main>
   <footer>
   <p>CopyRight &copy; 2021 Luz Perdomo - Todos los derechos reservados.</p>
-  </footer>
-  <script src=""></script>
-  <script src=""></script>
 </body>
 </html>
