fixed indentation of files

--- a/html5-css3/Workshop-1/index.html
+++ b/html5-css3/Workshop-1/index.html
@@ -8,10 +8,21 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
 
-  <body> <header> <nav class=""> <figure> <img src="" alt="">
-  </figure> <h1>LOGO</h1> <ul> <li><a href="#"></a>Home</li> <li><a
-  href="#"></a>Temario</li> <li><a href="#"></a>FAQ</li> <li><a
-  href="#"></a>Contactenos</li> </ul> </nav> </header>
+  <body>
+    <header>
+      <nav class="">
+        <figure>
+          <img src="" alt="">
+        </figure>
+        <h1>LOGO</h1>
+        <ul>
+          <li><a href="#"></a>Home</li>
+          <li><a href="#"></a>Temario</li>
+          <li><a href="#"></a>FAQ</li>
+          <li><a href="#"></a>Contactenos</li>
+        </ul>
+      </nav>
+    </header>
 
     <main>
       <div class="main-content">
