--- a/html5-css3/Workshop-2/index.html
+++ b/html5-css3/Workshop-2/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Workshop II</title>
-  <!-- <link rel="stylesheet" href="css/normalize.css"> -->
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
